<resources>
    <string name="app_name">JetpackComponentDemo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="my_home_fragment">My Home Fragment</string>
    <string name="my_second_fragment">My Second Fragment</string>
    <string name="my_third_fragment">My Third Fragment</string>
    <string name="list_fragment">List Fragment</string>
    <string name="list">List</string>
    <string name="upload">Upload</string>
    <string name="next">Next</string>
    <string name="na">--</string>
</resources>